--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Linked Open Samian Ware
+title: Florian Thiery Publications
 email:
 description: >- # this means to ignore newlines until "baseurl:"
- This Website provides the documentation to the SPARQL-Query Editor for the Samian Research Database.
-twitter_username: username
-github_username: rgzm
-minimal_mistakes_skin: default
+ Publications of Florian Thiery
+twitter_username: fthierygeo
+github_username: florianthiery
+minimal_mistakes_skin: dark
 search: false
 
 # Build settings
@@ -56,9 +56,9 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "archaeology.link"
+  name   : "Florian Thiery"
   avatar : "/assets/images/archaeologylink_logo.png"
-  bio    : "Linked Open Samian Ware"
+  bio    : "Research Software Engineer"
   links:
     #- label: "Website"
     #  icon: "fas fa-fw fa-link"
