--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ plugins:
 
 author:
   name   : "Florian Thiery"
-  avatar : "/assets/images/archaeologylink_logo.png"
+  avatar : "/assets/images/fthiery.png"
   bio    : "Research Software Engineer"
   links:
     #- label: "Website"
