--- a/_config.yml
+++ b/_config.yml
@@ -56,19 +56,19 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "Florian Thiery"
+  name   : "Florian Thiery M.Sc."
   avatar : "/assets/images/fthiery.png"
   bio    : "Research Software Engineer"
   links:
-    #- label: "Website"
-    #  icon: "fas fa-fw fa-link"
-    #  url: "https://"
-    #- label: "Twitter"
-    #  icon: "fab fa-fw fa-twitter-square"
-    #  url: "https://twitter.com/"
+    - label: "Website"
+      icon: "fas fa-fw fa-link"
+      url: "http://fthiery.de"
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
+      url: "https://twitter.com/fthierygeo"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/RGZM/samian-lod"
+      url: "https://github.com/florianthiery"
     #- label: "Instagram"
     #  icon: "fab fa-fw fa-instagram"
     #  url: "https://instagram.com/"
