--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,9 @@ author:
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "http://fthiery.de"
+    - label: "Curriculum Vitae"
+      icon: "fas fa-fw fa-link"
+      url: "http://data.fthiery.de/Thiery_CV.pdf"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/fthierygeo"
