--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ author:
   bio    : "Research Software Engineer"
   links:
     - label: "ORCID"
-      icon: "fas fa-fw fa-orcid"
+      icon: "fab fa-fw fa-orcid"
       url: "https://orcid.org/0000-0002-3246-3531"
     - label: "Website"
       icon: "fas fa-fw fa-link"
