--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -72,8 +72,8 @@ barPaper:
   - title: "non peer-reviewed paper"
     url: /paper/#non-peer-reviewed-paper
   - title: "extended abstrats"
-    url: /paper/#whitepaper
-  - title: "extended abstrats"
+    url: /paper/#extended-abstrats
+  - title: "Whitepaper"
     url: /paper/#whitepaper
   - title: "online publications"
     url: /paper/#online-publications
