--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -86,4 +86,4 @@ barPaper:
   - title: "Best Practice Papers"
     url: paper/#best-practice-papers
   - title: "Annual Reports"
-    url: /pub/paper/#annual-reports
+    url: /paper/#annual-reports
