--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,10 +15,10 @@ barPaper:
     url: /paper/#peer-reviewed-paper
   - title: "non peer-reviewed paper"
     url: /paper/#non-peer-reviewed-paper
-  - title: "extended abstrats"
-    url: /paper/#extended-abstrats
   - title: "Whitepaper"
     url: /paper/#whitepaper
+  - title: "extended abstracts"
+    url: /paper/#extended-abstracts
   - title: "online publications"
     url: /paper/#online-publications
   - title: "thesises"
